cmake_minimum_required(VERSION 3.25)
#set(CMAKE_BUILD_TYPE "Release")
project(MOSES)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
set(BUILD_SHARED_LIBS OFF)
set(SDL_SHARED OFF)
set(SDL_STATIC ON)
add_subdirectory(vendored/SDL3-3.2.16 EXCLUDE_FROM_ALL)
add_subdirectory(vendored/json EXCLUDE_FROM_ALL)
add_executable(MOSES main.cpp)
target_link_libraries(MOSES SDL3::SDL3)
target_link_libraries(MOSES nlohmann_json::nlohmann_json)
#set(CXXFLAGS  "-g -std=c++23 -O0 -Wall -Wextra -fsanitize=shift -fsanitize=undefined -fsanitize=address -fsanitize=signed-integer-overflow -D_GLIBCXX_DEBUG")
set(CXXFLAGS "-O2")
set(CMAKE_CXX_FLAGS "${CXXFLAGS}")
